plugins/kotlin/idea/tests/testData/checker/codeFragments/classHeaderWithTypeArguments.kt.fragment
this.foo(<error descr="[TYPE_MISMATCH]">"a"</error>)